--------------------------
Changes in 1.9 (not yet released)

- SpinBoxes can now also be created without buttons
- Opening/closing sub-menus has now a delay. It can be controlled via IGUIEnvironment::setMenuShowDelay.
- Add new flag to IMeshSceneNode::setMesh to allow to keeping the original node materials.
- New ETCF_ALLOW_MEMORY_COPY texture creation flag makes having an extra texture copy for OpenGL textures optional.
  This is now disabled by default. It saves a lot memory, but the cost is that lock() calls get slower.
  So enable it for textures which you need to read a lot on CPU (like for example font textures).
- Add parameter to setViewPort which allows disabling clipping of the area. Will only work in OpenGL.
  Thanks @Andrey01 for mentioning a use-case for this: https://irrlicht.sourceforge.io/forum/viewtopic.php?t=53020
- Empty meshes and meshbuffers now have invalid bounding-boxes. 
  Meshes no longer add invalid meshbuffer bounding boxes when recalculating their bounding box.
  Fixes bugs that empty meshbuffers could increase the bounding box sometimes and that SMesh could ignore meshbuffers with a single point.
- Avoid unnecessary string copies in GUI code when drawing fonts (accidentally introduced in Irrlicht 1.6).
- IGUIScrollBar has now getters for the scrollbar buttons and the options to disable background drawing
- Improved scrollbar handling in CGUITreeView (stepsizes, reacting to keys)
- Add IGUITreeView::getNextNode (traverse full tree), getPrevNode, getLastSelectTriggerEvent (to get mouse-keys) and scrollTo.
- Bugfix: CGUITreeView no longer dropping EGET_TREEVIEW_NODE_SELECT events when moving mouse while clicking
- CGUITreeView now shows expand icon (+/-) for sub-nodes with correct text-color
- Bugfix: CGUITreeView now aligns scrollbars correct so they work on resize
- obj/mtl loader no longer messes up bump textures when the name starts with a number
- CImageLoaderBMP now supports loading 1-bit images with palette data